--- a/css/style.css
+++ b/css/style.css
@@ -57,10 +57,16 @@
 	
 }
 
-fa.fa-check {
-	color: #fff;
-
+.fa.fa-check-circle-o {
+	margin: 2px 5px;
+    background: transparent;
+    color: #fff;
+    padding: 6px 6px;
+    border-radius: 2px solid 360px;
+   
 }
+
+
 
 .banner-btn {
 	margin: 5px 0;
@@ -110,7 +116,7 @@ fa.fa-check {
 
 .login-btn {
 	width: 85%;
-	margin: 5px auto;
+	margin: 20px auto;
 	padding: 5px 0;
 	background-color: #1A5276;
 	text-transform: uppercase;
